--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Kakao 지도 시작하기</title>
 </head>
 <body>
-	<div id="map" style="width:500px;height:400px;"></div>
+    document.write('<div id="map" style="width:500px;height:400px;"></div>');
 	<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=0aa0be8bafd2165cae7567a1aadfdba5"></script>
 	<script>
 		var container = document.getElementById('map');
